--- a/css trials.html
+++ b/css trials.html
@@ -8,5 +8,9 @@
 
         </head>
         <body>
-            <h1>Hello world.</h1>  
-        </body>
+             
+        <div class="bar" id="black"></div>
+        <div class="bar" id="red"></div>
+        <div class="bar" id="gold"></div>
+    </body>
+</html>
