two black boxes

--- a/css trials.html
+++ b/css trials.html
@@ -9,8 +9,8 @@
         </head>
         <body>
              
-        <div class="bar" id="black"></div>
-        <div class="bar" id="red"></div>
-        <div class="bar" id="gold"></div>
+        <div class="box" id="black"></div>
+        
+        <div class="box" id="black"></div>
     </body>
 </html>
