two black boxes and a red and blue box

--- a/css trials.html
+++ b/css trials.html
@@ -7,10 +7,20 @@
 
 
         </head>
+
         <body>
              
-        <div class="box" id="black"></div>
+        <div class="red" id="red">
+            <div class="box" id="black"></div>
+                <div class="box" id="black"></div>
+
+        </div>
+
+        <div class="blue" id="blue">
+            <div class="box" id="black"></div>
+                <div class="box" id="black"></div>
+
         
-        <div class="box" id="black"></div>
+
     </body>
 </html>
